--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <!-- Section Imagem e Texto -->
     <section id="section1">
-        <img src="/Portifolio_OF/ediane-perfil.jpeg" alt="Imagem Eiane Pinto" class="efeitoScrollReveal_Efeito2">
+        <img src="ediane-perfil.jpeg" alt="Imagem Eiane Pinto" class="efeitoScrollReveal_Efeito2">
         <div class="container-img-texto">
             <ul class="bio-perfil">
                 <li> Nome:<span class="formatacao-texto"> Ediane Cardoso Pinto </span></li>
