--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="estilo.css">
 
 
-    <title>Meu Portfolio</title>
+    <title>Ediane Cardoso Pintoo</title>
 </head>
 
 <body>
