--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
     <!-- Section Projetos -->
     <div id="projetos">
         <div class="container-projetos ">
-            <div class="row f1 efeitoScrollReveal"><img src="foto1.png" alt=""></div>
-            <div class="row efeitoScrollReveal"><img src="foto-2.png" alt=""></div>
+            <div class="row f1 efeitoScrollReveal"><img src="foto-1.jpeg" alt=""></div>
+            <div class="row efeitoScrollReveal"><img src="foto-2.jpeg" alt=""></div>
             <div class="row f1 efeitoScrollReveal"><img src="foto-3.png" alt=""></div>
-            <div class="row efeitoScrollReveal"><img src="foto-4.png" alt=""></div>
-            <div class="row f1 efeitoScrollReveal"><img src="foto-5.png" alt=""></div>
-            <div class="row efeitoScrollReveal"><img src="foto-6.png" alt=""></div>
+            <div class="row efeitoScrollReveal"><img src="foto-4.jpeg" alt=""></div>
+            <div class="row f1 efeitoScrollReveal"><img src="foto-5.jpeg" alt=""></div>
+            <div class="row efeitoScrollReveal"><img src="foto-6.jpeg" alt=""></div>
         </div>
     </div>
     <!-- FIM da Section Projetos -->
